@@ -1,6 +1,11 @@
 Chronological listing of changes. More detail is usually found in the Git commit messages
 and/or the pull requests.
 
+2013-07-02
+
+* Can ignore non-object arguments on a per-invocation basis.
+
+
 2013-06-19
 
 * Constraints implement NSCopying for Xcode 5 compatibility.
